[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/3ds.tres" type="DynamicFont" id=1]
[ext_resource path="res://Pause/buttons/MainButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pause/buttons/RetryButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Pause/buttons/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pause/PauseScreen.gd" type="Script" id=5]

[node name="PauseScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Overlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 58.4331
margin_right = 80.0
margin_bottom = 107.433
custom_fonts/font = ExtResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="Overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -79.0
margin_right = 180.0
margin_bottom = 80.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" parent="Overlay/PauseMenu" instance=ExtResource( 3 )]
margin_right = 360.0
margin_bottom = 40.0

[node name="MainButton" parent="Overlay/PauseMenu" instance=ExtResource( 2 )]
margin_top = 55.0
margin_right = 360.0
margin_bottom = 95.0

[node name="QuitButton" parent="Overlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 110.0
margin_right = 360.0
margin_bottom = 150.0
